--- a/src/app/departmentdetail/departmentdetail.component.css
+++ b/src/app/departmentdetail/departmentdetail.component.css
@@ -2,7 +2,7 @@
 	color:#ffffff;
 	font-size: 64px;
 	font-weight: bold;
-	border-bottom:2px solid #ffffff;
+	/*border-bottom:2px solid #ffffff;*/
 }
 
 .head:before{
@@ -12,7 +12,7 @@
 
 .description{
 	color:#ffffff;
-	font-size:32px; 
+	font-size:28px; 
 }
 
 .circle{
@@ -20,13 +20,14 @@
 	border-radius: 100%;
 	height:15px;
 	width:15px;
+	margin-left:40px;
 }
 
 .circle.active{
 	background-color:#fff;
 	height:20px;
 	width:20px;
-	margin-left:-2.5px;
+	margin-left:37.5px;
 }
 
 .indicators{
@@ -54,5 +55,19 @@
 
 .button-text{
 	font-size:24px;
+}
+
+.cross{
+	height:30px;
+	width:30px;
+	text-align: right;
+	margin-top:35%;
+	transform: rotate(0);
+	transition: 0.5s;
+}
+
+.cross:hover{
+	transform: rotate(90deg);
+	transition: 0.5s;
 }
 
