--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -5,7 +5,14 @@
 		</div>
 		<div class="col-12 col-md-7">
 			<div class="text">
-				<p class="head text-uppercase">{{current_event.name}}</p>
+				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0; margin-bottom: 16px;">
+					<div class="col-10">
+						<p class="head text-uppercase" style="margin-bottom:0">{{current_event.name}}</p>
+					</div>
+					<div class="col-2 text-right">
+					 	<p><img class="cross" src="/assets/cross.png"></p>
+					 </div>
+				</div>
 				<p class="description">
 					{{current_event.description}}
 				</p>
