--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -54,14 +54,15 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  	height:100vh;
-  	width:100vw;
+   min-height:100vh;
+  	max-width:100vw;
   	overflow-x:hidden;
 }
 
+
 @media screen and (min-width:1400px){
 	body{
-		overflow: hidden;
+		/*overflow: hidden;*/
 	}
 }
 
@@ -215,14 +216,14 @@ body{
 	}
 }
 
-@media screen and (min-width:992px){
+/*@media screen and (min-width:992px){
 	.footer{
 		position:fixed;
 		bottom:0;
 		padding-bottom: 20px;
 		width:90vw;
 	}
-}
+}*/
 
 @media screen and (max-width:1100px) and (min-width:675px){
 	.nav-item .nav-link{
