--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
   <router-outlet></router-outlet>
 
    
-    <div @footerAnimation class="footer row">
+    <div @footerAnimation class="footer row" *ngIf="footer">
       <div class="col-12 col-lg-6" *ngIf="smallWidth">
          <p class="footer-text text-lg-right text-center"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
@@ -59,7 +59,7 @@
           <span class="fa fa-instagram"></span>
       </div>
       <div class="col-12 col-lg-6" *ngIf="!smallWidth">
-        <p class="footer-text text-lg-right text-center" ><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
+        <p class="footer-text text-lg-right text-center" ><span class=" underline-footer d-inline-block" style="overflow-x: hidden;font-weight:bolder">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
     </div>
 
