coordi memories done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/departments">DEPARTMENTS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">COORDIE MEMORIES</a>
+          <a class="nav-link" href="/memories">COORDIE MEMORIES</a>
         </li>
         <li class="nav-item">
           <div class="blur-div" (mouseenter)="toggleTrigger()" (mouseleave)="toggleTrigger()" >
