--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -216,14 +216,14 @@ body{
 	}
 }
 
-/*@media screen and (min-width:992px){
+@media screen and (min-width:992px){
 	.footer{
 		position:fixed;
 		bottom:0;
 		padding-bottom: 20px;
 		width:90vw;
 	}
-}*/
+}
 
 @media screen and (max-width:1100px) and (min-width:675px){
 	.nav-item .nav-link{
