underline on navbar fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,6 +46,11 @@
 	width:0;
 }
 
+.nav-link.active::after {
+    width: 100%;
+    transition: width .4s;
+}
+
 /*************************/
 
 body{
