--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -33,10 +33,10 @@
 
 <div class="container-fluid" *ngIf="managers=='events'">
 	<div class="row text-center head-row">
-		<div class="col-11">
+		<div class="col-10 col-md-11">
 			<p class="text-uppercase text-center head-text" style="width:100%;transform:translateX(5%);"> Events manager</p>
 		</div>
-		<div class="col-1">
+		<div class="col-2 col-md-1">
 			<p><img class="cross" src="/assets/cross.png"></p>
 		</div>
 	</div>
