--- a/src/app/departmentdetail/departmentdetail.component.css
+++ b/src/app/departmentdetail/departmentdetail.component.css
@@ -71,3 +71,40 @@
 	transition: 0.5s;
 }
 
+@media screen and (max-width:675px){
+	.head,.head:before{
+		margin-top: 16px;
+		font-size: 32px;
+	}
+
+	.cross{
+		height:20px;
+		width:20px;
+		text-align: right;
+		margin-top:32px;
+		transform: rotate(0);
+		transition: 0.5s;
+	}
+
+	.description{
+		font-size:16px; 
+		text-align: center;
+	}
+
+	.blur-text{
+		text-align: center;
+	}
+
+	.blur{
+		width:105%;
+		transform: translateX(-62%);
+		position:absolute;
+		min-height:120%;
+		bottom:-10%;
+		background-color: #fff;
+		filter:blur(1px);
+		opacity:0.2;
+		border-radius: 25px;
+	}
+}
+
