--- a/src/app/managerdetail/managerdetail.component.css
+++ b/src/app/managerdetail/managerdetail.component.css
@@ -61,3 +61,16 @@
 	margin-right: 0;
 }
 
+
+@media screen and (max-width:675px){
+	.head-text{
+		font-size:20px;
+	}
+
+	.cross{
+		height:16px;
+		width:16px;
+		margin-top:10%;
+	}
+
+}
