--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -1,3 +1,4 @@
+
 <!-- <div class="container">
   <div class="row mt-5">
     <div class="col-12 col-md-4 department-div" >
@@ -34,7 +35,7 @@
 </div> -->
 
 
-
+<!-- 
 <div class="box-container" fxLayout="column" style="min-height: 800px;">
   <div class="app-title">Simple example app for the ngx-swiper-wrapper</div>
 
@@ -88,7 +89,76 @@
           <div class="swiper-button-prev" [hidden]="config.navigation === false"></div>
           <div class="swiper-button-next" [hidden]="config.navigation === false"></div>
         </div>
-      </div>
+      </div>-->
+
+<!--     <ngx-glide>
+  <div><img src="/assets/nature-1.jpg" class="glide-img"></div>
+  <div><img src="/assets/nature-2.jpg" class="glide-img"></div>
+  <div><img src="/assets/nature-3.jpg" class="glide-img"></div>
+</ngx-glide> -->
+
+<div class="container glide-container mt-4">
+  <div class="glide">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/nature-1.jpg" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            01
+          </div>
+          <div class="text-name text-center text-uppercase">
+            events
+          </div>
+        </li>
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/nature-2.jpg" class="glide-img" (click)="redirect('creatives')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase ">
+            02
+          </div>
+          <div class="text-name text-center text-uppercase">
+            creatives
+          </div>
+        </li>
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/nature-3.jpg" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            03
+          </div>
+          <div class="text-name text-center text-uppercase">
+           web
+          </div>
+        </li>
+        <li class="glide__slide">
+          <div class="d-image">
+            <img src="/assets/nature-4.jpg" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+          </div>
+          <div class="text-num text-center text-uppercase">
+            04
+          </div>
+          <div class="text-name text-center text-uppercase">
+            infrastructure
+          </div>
+        </li>
+      </ul>
     </div>
+
+
+   <!--  <div class="glide__arrows" data-glide-el="controls">
+      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+      <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+    </div> -->
+
+    <div class="glide__bullets" data-glide-el="controls[nav]">
+    <button class="glide__bullet" data-glide-dir="=1"></button>
+    <button class="glide__bullet" data-glide-dir="=2"></button>
+    <button class="glide__bullet" data-glide-dir="=3"></button>
+    <button class="glide__bullet" data-glide-dir="=4"></button>
+  </div>
   </div>
 </div>
