--- a/src/app/coordimemories/coordimemories.component.css
+++ b/src/app/coordimemories/coordimemories.component.css
@@ -19,3 +19,19 @@
 	color:#fff;
 	font-size: 24px;
 }
+
+.memory-row:nth-child(even) .left-image{
+	display: none;
+}
+
+.memory-row:nth-child(odd) .name{
+	text-align: right;
+}
+
+.memory-row:nth-child(even) .description-text{
+	text-align: right;
+}
+
+.memory-row:nth-child(odd) .right-image{
+	display: none;
+}
