--- a/src/app/coordimemories/coordimemories.component.html
+++ b/src/app/coordimemories/coordimemories.component.html
@@ -1,27 +1,18 @@
 <div class="container">
-	<div class="row mb-5">
-		<div class="col-12 col-md-3 text-center">
-			<img src="https://pluspng.com/img-png/download-happy-person-png-images-transparent-gallery-advertisement-275.png" class="coordi-image">
+	<div class="row mb-5 memory-row" *ngFor="let m of memories_list">
+		<div class="col-12 col-md-3 text-center left-image">
+			<img src="{{m.image}}" class="coordi-image">
 		</div>
 		<div class="col-12 col-md-9 coordi-text">
 			<p class="description-text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				{{m.description}}
 			</p>
-			<p class="name text-right">- Sudarshan Wadajkar</p> 
-
+			<p class="name">{{m.name}}</p> 
+		</div>
+		<div class="col-12 col-md-3 text-center right-image">
+			<img src="{{m.image}}" class="coordi-image">
 		</div>
 	</div>
 
-	<div class="row mb-5">
-		<div class="col-12 col-md-9 coordi-text">
-			<p class="description-text text-right">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-			<p class="name text-left">Sudarshan Wadajkar -</p> 
-		</div>
-
-		<div class="col-12 col-md-3 text-center">
-			<img src="https://pluspng.com/img-png/download-happy-person-png-images-transparent-gallery-advertisement-275.png" class="coordi-image">
-		</div>
-	</div>
+	
 </div>
