--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -4,7 +4,7 @@
 			<p class="text-uppercase text-center head-text" style="width:100%;transform:translateX(5%);"> Creatives manager</p>
 		</div>
 		<div class="col-1">
-			<p><img class="cross" src="/assets/cross.png"></p>
+			<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
 		</div>
 	</div>
 
@@ -37,7 +37,7 @@
 			<p class="text-uppercase text-center head-text" style="width:100%;transform:translateX(5%);"> Events manager</p>
 		</div>
 		<div class="col-2 col-md-1">
-			<p><img class="cross" src="/assets/cross.png"></p>
+			<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
 		</div>
 	</div>
 
