--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -4,7 +4,7 @@
       <ul class="glide__slides">
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/nature-1.jpg" (click)="redirect('managerdetail/events')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/events.png" (click)="redirect('departmentdetail')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             01
@@ -15,7 +15,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/nature-2.jpg" class="glide-img" (click)="redirect('managerdetail/creatives')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/creatives.png" class="glide-img" (click)="redirect('managerdetail/creatives')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase ">
             02
@@ -26,7 +26,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/nature-3.jpg" (click)="redirect('managerdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/web.png" (click)="redirect('managerdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             03
@@ -37,7 +37,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/nature-4.jpg" class="glide-img" (click)="redirect('managerdetail/infrastructure')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('managerdetail/infrastructure')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             04
