--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -1,9 +1,9 @@
 <div class="container" *ngIf="managers=='creatives'">
 	<div class="row text-center head-row">
-		<div class="col-11">
-			<p class="text-uppercase text-center head-text" style="width:100%;transform:translateX(5%);"> Creatives manager</p>
+		<div class="col-10" >
+			<p class="text-left text-md-center"> <img src="assets/creatives_head.png" class="image-head"></p>
 		</div>
-		<div class="col-1">
+		<div class="col-2" >
 			<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
 		</div>
 	</div>
@@ -13,8 +13,8 @@
 		<div class="col-12 col-md-4">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<img src="https://clipartart.com/images/clipart-project-manager-4.jpg" class="manager-img">
-					<p class="manager-name text-uppercase text-center">rahul shanbag</p>
+					<img src="assets/shanbhag.png" class="manager-img">
+					<p class="manager-name mt-2 text-uppercase text-center">rahul shanbag</p>
 					<p class="manager-num text-center">9090909090</p>
 				</div>
 			</div>
@@ -33,11 +33,11 @@
 
 <div class="container-fluid" *ngIf="managers=='events'">
 	<div class="row text-center head-row">
-		<div class="col-10 col-md-11">
-			<p class="text-uppercase text-center head-text" style="width:100%;transform:translateX(5%);"> Events manager</p>
+		<div class="col-10">
+			<p class="text-left text-md-center"> <img src="assets/events_head.png" class="image-head"></p>
 		</div>
-		<div class="col-2 col-md-1">
-			<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+		<div class="col-2">
+			<p><img class="cross" id="events-cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
 		</div>
 	</div>
 
@@ -45,7 +45,7 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<img src="https://clipartart.com/images/clipart-project-manager-4.jpg" class="manager-img">
+					<img src="assets/shanbhag.png" class="manager-img">
 					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
 					<p class="manager-num text-center">9090909090</p>
 				</div>
@@ -63,7 +63,7 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<img src="https://clipartart.com/images/clipart-project-manager-4.jpg" class="manager-img">
+					<img src="assets/shanbhag.png" class="manager-img">
 					<p class="manager-name text-uppercase text-center">rahul shanbag</p>
 					<p class="manager-num text-center">9090909090</p>
 				</div>
@@ -81,7 +81,7 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<img src="https://clipartart.com/images/clipart-project-manager-4.jpg" class="manager-img">
+					<img src="assets/shanbhag.png" class="manager-img">
 					<p class="manager-name text-uppercase text-center">rahul shanbag</p>
 					<p class="manager-num text-center">9090909090</p>
 				</div>
