--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -222,12 +222,12 @@ body{
 }
 
 @media screen and (min-width:992px){
-	.footer{
+	/*.footer{
 		position:fixed;
 		bottom:0;
 		padding-bottom: 20px;
 		width:90vw;
-	}
+	}*/
 }
 
 @media screen and (max-width:1100px) and (min-width:675px){
