--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,16 +15,16 @@
       
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#" (click)="changeScreen($event,'home')">HOME</a>
+          <a class="nav-link active" (click)="changeScreen($event,'home')">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="changeScreen($event,'whytf')">WHY TF</a>
+          <a class="nav-link" (click)="changeScreen($event,'whytf')">WHY TF</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/departments" id="departments">DEPARTMENTS</a>
+          <a class="nav-link" (click)="redirect('departments')" id="departments">DEPARTMENTS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/memories" id="memories">COORDIE MEMORIES</a>
+          <a class="nav-link" (click)="redirect('memories')" id="memories">COORDIE MEMORIES</a>
         </li>
         <li class="nav-item">
           <div class="blur-div" (mouseenter)="toggleTrigger()" (mouseleave)="toggleTrigger()" >
@@ -45,10 +45,12 @@
 <div class="main-container-mobile">
 
   <!-- <app-home></app-home> -->
-  <router-outlet></router-outlet>
+  <div [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </div>
 
    
-    <div @footerAnimation class="footer row" *ngIf="footer">
+    <div @footerAnimation class="footer row" >
       <div class="col-12 col-lg-6" *ngIf="smallWidth">
          <p class="footer-text text-lg-right text-center"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
