--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,32 @@
 /******xperimental*****/
-.blur-div{
+
+body{
 	position:relative;
-	cursor: pointer;
+	min-height:100vh;
 }
 
-.blur{
-	width:110%;
-	transform: translateX(-5%);
-	position:absolute;
-	min-height:100%;
-	background-color: #fff;
-	filter:blur(1px);
-	opacity:0.2;
-	border-radius: 25px;
+.main-container{
+	padding-bottom:10vh;
 }
+
+.footer{
+	position:absolute;
+	bottom:0;
+	min-width:90vw;
+	height:10vh;
+}
+
+@media screen and (max-width:675px){
+	.footer{
+		margin-bottom: 10vh;
+	}
+
+	.fa{
+		margin-bottom: 32px;
+	}
+}
+
+
 
 /*********************/
 
@@ -51,6 +64,25 @@
     transition: width .4s;
 }
 
+/********Blur effect*********/
+
+.blur-div{
+	position:relative;
+	cursor: pointer;
+}
+
+.blur{
+	width:110%;
+	transform: translateX(-5%);
+	position:absolute;
+	min-height:100%;
+	background-color: #fff;
+	filter:blur(1px);
+	opacity:0.2;
+	border-radius: 25px;
+}
+
+
 /*************************/
 
 body{
@@ -62,12 +94,14 @@ body{
    min-height:100vh;
   	max-width:100vw;
   	overflow-x:hidden;
+  	/*border:2px solid red;*/
+  	/*overflow: hidden;*/
 }
 
 
 @media screen and (min-width:1400px){
 	body{
-		/*overflow: hidden;*/
+		overflow: hidden;
 	}
 }
 
