--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,8 +51,8 @@
 
    
     <div @footerAnimation class="footer row" >
-      <div class="col-12 col-lg-6" *ngIf="smallWidth">
-         <p class="footer-text text-lg-right text-center"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
+      <div class="col-12 col-lg-6 " *ngIf="smallWidth">
+         <p class="footer-text text-center"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
       <div class="col-12 col-lg-6 text-center text-lg-left">
           <span class="fa fa-twitter"></span>
