--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,8 +60,8 @@
           <span class="fa fa-facebook"></span>
           <span class="fa fa-instagram"></span>
       </div>
-      <div class="col-12 col-lg-6" *ngIf="!smallWidth">
-        <p class="footer-text text-lg-right text-center" ><span class=" underline-footer d-inline-block" style="overflow-x: hidden;font-weight:bolder">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
+      <div class="col-12 col-lg-6 results-div" *ngIf="!smallWidth">
+        <p class="footer-text text-lg-right text-center" (click)="redirect('results')"><span class=" underline-footer d-inline-block" style="overflow-x: hidden;font-weight:bolder">RESULT OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
     </div>
 
