--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,24 @@
 /******xperimental*****/
 
-body{
-	position:relative;
-	min-height:100vh;
+@media screen and (min-width:675px){
+	body{
+		position:relative;
+		min-height:100vh;
+	}
+
+	.main-container{
+		padding-bottom:10vh;
+	}
+
+	.footer{
+		position:absolute;
+		bottom:0;
+		min-width:90vw;
+		height:10vh;
+	}
 }
 
-.main-container{
-	padding-bottom:10vh;
-}
-
-.footer{
-	position:absolute;
-	bottom:0;
-	min-width:90vw;
-	height:10vh;
-}
-
-@media screen and (max-width:675px){
+/*@media screen and (max-width:675px){
 	.footer{
 		margin-bottom: 10vh;
 	}
@@ -25,7 +27,7 @@ body{
 		margin-bottom: 32px;
 	}
 }
-
+*/
 
 
 /*********************/
@@ -282,5 +284,9 @@ body{
 @media screen and (max-width:675px){
 	.footer{
 		margin-top: 32px;
+	}
+
+	body{
+		overflow:hidden;
 	}
 }
