--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -4,7 +4,7 @@
 			<p class="text-left text-md-center"> <img src="assets/reversevc.png" class="image-head"></p>
 		</div>
 		<div class="col-2">
-			<p><img class="cross" id="events-cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+			<p><img class="cross" id="events-cross" (click)="redirect('')" src="/assets/cross.png"></p>
 		</div>
 	</div>
 
