--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
+    <span class="line-1"></span>
+    <span class="line-1 line-m"></span>
+    <span class="line-1"></span>
   </button>
 
   <!-- Navbar links -->
