--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-ui-loader fgsType="rectangle-bounce-pulse-out" fgsColor="red"></ngx-ui-loader>
 <body>
 <div class="main-container">
 <nav @navAnimation class="navbar navbar-expand-lg bg-dark navbar-dark transparent-nav">
