--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -26,7 +26,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/web.png" (click)="redirect('managerdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/web.png" (click)="redirect('departmentdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             03
@@ -37,7 +37,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('managerdetail/infrastructure')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/infrastructure')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             04
